# MediVault-Deerhack

./: Cargo.toml  dummy1.json  index.html  index.js  ntp_time_server.ino  package-lock.json  package.json  sannux.json
client/: README.md  package-lock.json  package.json
client/src/: App.tsx  Router.tsx  main.tsx  test.html
client/src/components/: Confirmation.tsx  Form.tsx  GeneralDetails.tsx  MedicalDetails.tsx  MedicalFetch.tsx  MedicalView.tsx  Nav.tsx
client/src/components/Dispenser/: DispenserDetails.tsx  DispenserView.tsx  dis.css
client/src/pages/: Dispenser.tsx  LoginPage.tsx  MainPage.tsx  MedFetch.tsx  MedicalRecord.tsx  PatientRecord.tsx  RegisterPage.tsx
client/src/styles/: main.css  navbar.css
client/utils/: hash.ts
controller/: controller.notify.js
json_deserializer/: json_deserializer.ino
nodeFinal/: nodeFinal.ino
router/: route.notify.js
server/: .env  Cargo.toml
server/src/: dispenser.rs  login.rs  main.rs  model.rs  module.rs  register.rs  smtp.rs
src/: block.rs  blockchain.rs  ipfs.rs  main.rs  router.rs
