[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sha2 = "0.10.8"
crypto="0.5.1"
serde = {version="1.0", features = ["derive"]}
serde_json="1.0"
hex="0.4"
tokio = { version = "1", features = ["full"] }
actix-cors = "0.6.4"
actix-web = "4"
actix-multipart = "0.6.1"
ipfsapi="0.4.0"
pretty_env_logger="0.5.0"
log="0.4" 
futures = "0.3.30"
