[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
serde = { version = "1.0.104", features = ["derive"] }
mongodb = "2.8.2"
dotenv = "0.15.0"
bcrypt = "0.15.1"
mail-send = "=0.4.7"
mail-builder = "0.3.1"
serde_json = "1.0.117"
